# CS5780-WillMetz-RohanVittal-AdamLosser-MattShaw-2

./: .gitignore  BOM.md  README.md
mic_test/: .gitignore  CMakeLists.txt  CMakePresets.json  validation_program.py
mic_test/.cache/clangd/index/: adc_mic.c.120F05DD36C8CAC5.idx  adc_mic.c.21E7AD07D432B9FF.idx  adc_mic.h.8ACEFB28D065CC2A.idx  adc_mic.h.A586726AAF7D33EC.idx  app_config.h.07E54369B716CCC7.idx  app_config.h.BDD97082FD79F926.idx  board.c.03686D09A4B93242.idx  board.c.179DB0F9F5DA0029.idx  board.h.2E0588B8E365E17F.idx  board.h.568AB69CD9662986.idx  cmsis_compiler.h.56B74A39A675B132.idx  cmsis_compiler.h.E40643723338930B.idx  cmsis_gcc.h.A0980E0112F227FE.idx  cmsis_gcc.h.BB26A9F824A5797A.idx  cmsis_version.h.279DB1837A7F2CB2.idx  cmsis_version.h.74B2555242363239.idx  core_cm0.h.29F202FF4BF86D8C.idx  core_cm0.h.AC503D1CD1E0FE94.idx  main.c.0E9BC5A9079A3010.idx  main.c.9C5E33A88D9ABBB0.idx  nixie_drivers.c.0718C6D0F2C174C8.idx  nixie_drivers.c.7EEE64A36F807D71.idx  nixie_drivers.h.2F59826C29509814.idx  nixie_drivers.h.8B6141EF6D0D2802.idx  runtime_stubs.c.7FB103281EFD6CDF.idx  runtime_stubs.c.8D42DB6B81753EA2.idx  startup_stm32f072xb.s.CB2E427A454002A1.idx  startup_stm32f072xb.s.F3863AFEA7DBC4BE.idx  stm32_hal_legacy.h.2BF34C0FCCB157F2.idx  stm32_hal_legacy.h.7E865F1F31253826.idx  stm32f072xb.h.388DDB514BA8E64B.idx  stm32f072xb.h.9C929E2B01FA6555.idx  (+62 more)
mic_test/Inc/: adc_mic.h  app_config.h  board.h  nixie_drivers.h  stm32f0xx_it.h  uart.h
mic_test/Src/: adc_mic.c  board.c  main.c  nixie_drivers.c  runtime_stubs.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  uart.c
mic_test/cmake/: flash_stm32.cmake  gcc-arm-none-eabi.cmake
(+22 files in other folders)
